--- a/Templates/about.html
+++ b/Templates/about.html
@@ -5,3 +5,5 @@ using the Nick Wright UDEMY lesson on Django 2
 The website counts words
 <br/>
 <a href="{% url "home" %}"> Go Back </a>
+
+Copyright 2018
