Added github and bitbucket connection

--- a/Templates/about.html
+++ b/Templates/about.html
@@ -2,7 +2,7 @@
 This is a website designed by Liam Collins
 using the Nick Wright UDEMY lesson on Django 2
 <br/>
-The website counts words
+The website counts words and was uploaded to bitbucket and github
 <br/>
 <a href="{% url "home" %}"> Go Back </a>
 
